# vertex-pipelines-end-to-end-samples

./: .gitignore  Makefile
components/vertex-components/src/vertex_components/: __init__.py  lookup_model.py  upload_model.py
components/vertex-components/tests/: test_lookup_model.py
model/: Dockerfile  cloudbuild.yaml  pyproject.toml
model/propension/serving/: main.py  sample_instances.json
model/propension/training/notebooks/: train.ipynb
model/propension/training/src/: feature_constants.py  main.py  transformers.py
model/propension/training/tests/: conftest.py  test_train.py  test_transformers.py
model/utilities/: README.md  pyproject.toml
model/utilities/src/utilities/: __init__.py  custom_transformers.py  ml_pipeline.py  utils.py
model/utilities/tests/: conftest.py  test_custom_transformers.py  test_ml_pipeline.py  test_utils.py
pipelines/pipelines/: algorithm_strategy.py  algorithm_strategy_interface.py  pipeline.py
pipelines/pipelines/training/: pipeline.py
pipelines/src/pipelines/propension/: config.py
pipelines/src/pipelines/propension/prediction/: pipeline.py
pipelines/src/pipelines/propension/prediction/queries/: enrich.sql  population.sql
pipelines/src/pipelines/propension/training/: pipeline.py
pipelines/src/pipelines/propension/training/queries/: enrich.sql  split_data.sql  target_engineering.sql
utilities/: pyproject.toml
utilities/src/utilities/: custom_transformers.py
utilities/tests/: conftest.py  test_custom_transformers.py  test_ml_pipeline.py
