[tool.poetry]
name = "utilities"
version = "0.1.1"
authors = ["Carlos Lopez <carlos.lopez@rimac.com>"]
description = "Utilities to facilitate common data sciencie tasks"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = {extras = ["fss", "gcp"], version = "^2.0.3"}
lightgbm = "^3.3.5"
scikit-learn = "^1.3.0"
joblib = "==1.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1,<8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
per-file-ignores = [
    "E203",
    "F841"
]
ignore = [
    "E203",
    "F841",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = "tests"
junit_family = "xunit2"
